--- a/index.html
+++ b/index.html
@@ -230,7 +230,142 @@
     <!-- section 3  -->
 
     <section class="section3">
-      <div class="section3MainDiv" id="section3Grid">
+      <div class="section3MainDiv" id="section3Grid"></div>
+    </section>
+
+    <!-- section 4 -->
+
+    <section class="section4">
+      <div class="section4MainDiv">
+        <div class="headingSection4">
+          <h4>OUR ROOM</h4>
+        </div>
+        <div class="heading2Section4">
+          <h4>Explore Our Hotel</h4>
+        </div>
+        <div class="gridSection4">
+          <div class="card2">
+            <div class="floatingHeading">
+              <div class="floatingHeading1">Delux Room</div>
+              <div class="floatingHeading2">
+                <sup>$</sup>
+                <span>55</span>/day
+              </div>
+            </div>
+          </div>
+          <div class="card2">
+            <div class="floatingHeading">
+              <div class="floatingHeading1">Delux Room</div>
+              <div class="floatingHeading2">
+                <sup>$</sup>
+                <span>55</span>/day
+              </div>
+            </div>
+          </div>
+          <div class="card2">
+            <div class="floatingHeading">
+              <div class="floatingHeading1">Delux Room</div>
+              <div class="floatingHeading2">
+                <sup>$</sup>
+                <span>55</span>/day
+              </div>
+            </div>
+          </div>
+          <div class="card2">
+            <div class="floatingHeading">
+              <div class="floatingHeading1">Delux Room</div>
+              <div class="floatingHeading2">
+                <sup>$</sup>
+                <span>55</span>/day
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Section 5  -->
+
+    <section class="section5">
+      <div class="section5Main">
+        <div class="headingrid">
+          <div>
+            <p>Planning your next trip? Save up to 25% on your hotel</p>
+          </div>
+          <div class="exploreButtom"><button>Explorer More</button></div>
+        </div>
+
+        <div class="sction5DetaiGrid">
+          <div>
+            <img
+              src="https://preview.colorlib.com/theme/hiroto/img/testimonial-left.jpg"
+              alt=""
+            />
+          </div>
+          <div>
+            <div class="anoutusHeadingsection2">
+              <span>TESTIMONIALS</span>
+            </div>
+            <div class="heading2Section2">
+              <h1>What do customers say about us?</h1>
+            </div>
+            <div class="innerGrid">
+              <div><span class="textSpan"> Detailed Review: </span></div>
+              <div>
+                <span
+                  ><img
+                    class="star"
+                    src="https://img.icons8.com/?size=100&id=8ggStxqyboK5&format=png&color=000000"
+                    alt=""
+                /></span>
+                <span
+                  ><img
+                    class="star"
+                    src="https://img.icons8.com/?size=100&id=8ggStxqyboK5&format=png&color=000000"
+                    alt=""
+                /></span>
+                <span
+                  ><img
+                    class="star"
+                    src="https://img.icons8.com/?size=100&id=8ggStxqyboK5&format=png&color=000000"
+                    alt=""
+                /></span>
+                <span
+                  ><img
+                    class="star"
+                    src="https://img.icons8.com/?size=100&id=8ggStxqyboK5&format=png&color=000000"
+                    alt=""
+                /></span>
+              </div>
+            </div>
+            <div class="reviewText">
+              <p>
+                ore eu fugiat nulla pariatur. Excepteur sint occaecat cupidat
+                non proident, sunt in culpa qui officia deserunt mollit anim id
+                est laborum. Sed ut perspiciatis unde omnis iste natus error sit
+                voluptatem accusantium doloremque laudantium.
+              </p>
+            </div>
+            <div class="innerGrid">
+              <div><span class="textSpan">01 <span>------------</span> 04</span></div>
+              <div>
+                <span
+                  ><img
+                    class="star"
+                    src="https://img.icons8.com/?size=100&id=1806&format=png&color=000000"
+                    alt=""
+                /></span>
+                <span
+                  ><img
+                    class="star"
+                    src="https://img.icons8.com/?size=100&id=61&format=png&color=000000"
+                    alt=""
+                /></span>
+                
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
   </body>
